reglage du bug de la double scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,8 @@ body {
 }
 
 .preloader.d-done {
-    display: none;
+    /* display: none; */
+    opacity: 0;
 }
 
 .back-info {
@@ -45,11 +46,26 @@ body {
     align-items: center;
     flex-direction: column;
     z-index: 10000;
+    transition: 0.8s;
+}
+
+.preloader.active {
+    display: none;
 }
 
 .preloader img {
     width: 100%;
     max-width: 300px;
+}
+
+.dv {
+    animation: rotate 2s linear infinite;
+    opacity: .6;
+}
+
+.dr {
+    animation: rotateScale 4s linear infinite;
+    opacity: .1;
 }
 
 .anime-logo {
@@ -79,16 +95,26 @@ body {
     max-width: 1300px;
     margin: auto;
     min-height: 100vh;
-    padding: 0 10px;
-    overflow-x: hidden;
+    padding: 70px 10px 0 10px;
 }
 
 .navigation {
+    position: fixed;
     width: 100%;
+    max-width: 1300px;
     height: 70px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 100;
+}
+
+.navigation.active {
+    background-color: #fff;
+    box-shadow: 0 0 5px 3px rgba(75, 75, 75, 0.219);
 }
 
 .logo {
@@ -198,6 +224,7 @@ body {
 
 .cibles {
     position: relative;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -215,7 +242,7 @@ body {
     box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.292);
     opacity: 0;
     /* transform: translateX(-100%); */
-    transition: 0.5s;
+    transition: opacity 0.8s, transform 0.1s;
 }
 
 .trans-l {
@@ -259,6 +286,44 @@ body {
 
 .btn-cible button {
     width: 100%;
+}
+
+@keyframes dropShadow {
+    0% {
+        filter: drop-shadow(2px 2px 0px #ffffff00);
+    }
+
+    50% {
+        filter: drop-shadow(2px 2px 0px #fff);
+    }
+
+    100% {
+        filter: drop-shadow(2px 2px 0px #ffffff00);
+    }
+}
+
+@keyframes rotate {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+
+    to {
+        transform: scale(1.1) rotate(360deg);
+    }
+}
+
+@keyframes rotateScale {
+    0% {
+        transform: scale(1) rotate(0deg);
+    }
+
+    50% {
+        transform: scale(1.3) rotate(-180deg);
+    }
+
+    100% {
+        transform: scale(1) rotate(-360deg);
+    }
 }
 
 @media screen and (max-width : 750px) {
